estrutura de pasta e aquivos

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/reset.css">
-    
+    <link rel="stylesheet" href="style/global.css">
+
     <title>Omma-Receitas</title>
 </head>
 <body>
+    <header>
+        <div class="cabeçalho">
+            <img class="logo-cabeçalho" src="img/logo.png" alt="Logo Omma-Receitas">
+        </div>
+        <nav class="menu-topo">
+            <ul class="menu-lista">
+                <li class="menu-itens"><a href="index.html">Inicio</a></li>
+                <li class="menu-itens"><a href="receitas.html">Receitas</a></li>
+                <li class="menu-itens"><a href="contato.html">Contato</a></li>                
+            </ul>
+        </nav>
+    </header>
+    <a href="#">teste</a>
     
 </body>
 </html>
