--- a/index.html
+++ b/index.html
@@ -22,7 +22,30 @@
             </ul>
         </nav>
     </header>
-    <a href="#">teste</a>
     
+    <main>
+        <section class="home-principal">
+            <Div class="banner-principal">
+                <img class="img-banner-principal"src="img/image-1-amarela.png" alt="Banner mae cozinhando com a filha">
+                <p class="texto-banner-principal">Receitas<br>Com afeto</p>
+            </Div>
+
+            Receitas da semana
+            <img class="img-banner-secundario" src="img/image-2-amarela.png" alt="Duas mulhers cozinhando">
+            <div class="banner-secundario">
+                
+                <h1 class="titulo-banner-secundario">Comer é viver</h1>
+                <p class="texto-banner-secundario">Receitas preparadas com muito<br>carinho, para que você possa<br>sentir o prazer de preprarar uma<br>deliciosa refeição para sua familia.<br><br>
+                Todas as receitas terá a lista de<br>ingrediente indicando tudo que<br>você precisa, além disso, terá as<br>intruções de preparo. </p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="rodape">
+            <img class="logo-rodape" src="img/logo.png" alt="Logo Omma-Receitas">
+            <div class="copyrigth">© 2022 omma - Todos os direitos são de vocês</div>
+        </div>
+    </footer>
 </body>
 </html>
