--- a/receita-moqueca.html
+++ b/receita-moqueca.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/global.css">
 
-    <title>Contato</title>
+    <title>Receita Moqueca</title>
 </head>
 <body>
     <header>
