--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="item-receitas-da-semana"> 
                         <img class="img-receitas-da-semana" src="img/risoto.png" alt="Imagem de um Risoto de aborora">
                         <p class="legenda-receitas">Risoto de abobora</p>
-                        <button class="bnt-conferir">Conferir</button>
+                        <button class="bnt-conferir"><a href="risoto.html">Conferir</a></button>
                     </li>
                     <li class="item-receitas-da-semana"> 
                         <img class="img-receitas-da-semana" src="img/bolo-banana.png" alt="Imagem de um bolo de banana">
