--- a/receitas.html
+++ b/receitas.html
@@ -31,7 +31,7 @@
                 <li> 
                     <img class="item-todas-receitas" src="img/risoto.png" alt="imagem de um risoto de abobora"> 
                     <h1 class="legenda-todas-receitas">Risoto de abobora</h1> 
-                    <button class="bnt-conferir">Conferir</button>
+                    <button class="bnt-conferir"><a href="risoto.html">Conferir</a></button>
                 </li>
                 <li> 
                     <img class="item-todas-receitas" src="img/bolo-banana.png" alt="imagem de um bolo de banana"> 
