--- a/contato.html
+++ b/contato.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/contato.css">
 
-    <title>Contato</title>
+    <title> Contato</title>
+
 </head>
 <body>
     <header>
@@ -23,8 +25,40 @@
         </nav>
     </header>
     
-    <main>
+    <main >
+        <section class="home-banner-principal">
+            <Div class="banner-principal">
+                <img class="img-banner-principal"src="img/image-1-amarela.png" alt="Banner mae cozinhando com a filha">
+                <p class="texto-banner-principal">Manda um oi =)</p>
+            </Div>
+        </section>
 
+        <div class="main-contato">
+            <section class="contato">
+                <h1 class="titulo-contato">Contato</h1>
+                <form action="#" method="post">
+                    <div>
+                        <label for="nome"></label>
+                        <input type="text" value="Seu Nome" id="contato-nome" />
+                    </div>
+                    <div>
+                        <label for="email"></label>
+                        <input type="email" value="Seu E-mail" id="contato-email" />
+                    </div>
+                    <div>
+                        <label for="msg"></label>
+                        <textarea  value="Digite sua mensagem!" id="contato-msg">Digite seu Texto aqui!</textarea>
+                    </div>
+                    <div class="button">
+                        <button type="submit">Enviar</button>
+                    </div>
+                </form>
+            
+            </section>
+            <aside>
+                <div class="aside-contato"></div>
+            </aside>
+        </div>
     </main>
 
     <footer>
